<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_homescreen"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/MyMaterialTheme.PopupOverlay"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:titleTextColor="@color/white"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_search"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentTop="true"
                    android:background="@color/white"
                    android:visibility="gone"
                    app:collapseIcon="@drawable/ic_back"
                    app:titleTextColor="@color/colorPrimary" />

        </RelativeLayout>








        <com.ogaclejapan.smarttablayout.SmartTabLayout
                android:id="@+id/hometablayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clipToPadding="false"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                app:stl_defaultTabTextColor="@color/white"
                app:stl_defaultTabTextHorizontalPadding="18dp"
                app:stl_dividerColor="@color/transparent"
                app:stl_dividerThickness="0dp"
                app:stl_indicatorColor="@color/black_20"
                app:stl_indicatorCornerRadius="18dp"
                app:stl_indicatorGravity="center"
                app:stl_indicatorInterpolation="smart"
                app:stl_indicatorThickness="36dp"
                app:stl_underlineColor="@color/transparent"
                app:stl_underlineThickness="0dp"

        />



    </android.support.design.widget.AppBarLayout>




    <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_below="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />





    <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|right"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:menu_colorNormal="@color/colorPrimary"
            app:menu_colorPressed="@color/colorPrimaryDark"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_position="left"
            fab:menu_labels_singleLine="true"
            tools:ignore="RtlSymmetry">

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_contact"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryDark"
                fab:fab_label="@string/fab_contact"
                fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryDark"
                fab:fab_label="@string/fab_email"
                fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_bank_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bank"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryDark"
                fab:fab_label="@string/fab_account"
                fab:fab_size="mini" />


        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_last_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_note"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryDark"
                fab:fab_label="@string/fab_note"
                fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>








</RelativeLayout>